<resources>
    <string name="app_name">wwwuuudddaaayyyuuu07</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">设置</string>
    <string name="str_exit_app_toast_message">再次点击返回键退出</string>
    <string name="str_loading">加载中</string>
    <string name="str_loading_login">登录中</string>
    <string name="str_please_loading">正在加载，请等待......</string>
    <string name="str_total_head">共</string>
    <string name="str_total_tail">条数据</string>
    <string name="str_cancel">取消</string>
    <string name="str_square">/㎡</string>
    <string name="str_square_unit">元/㎡</string>
    <string name="str_square_total_unit">万</string>
    <string name="btn_exit_login">退出登录</string>
    <string name="txt_today_unit">天</string>
    <string name="txt_num">次</string>
    <string name="txt_people">人</string>
    <string name="hint_txt_nosearch">暂无搜索结果</string>
    <string name="push_time_in_second">5000</string>
    <string name="city_nj_china">南京</string>
    <string name="city_hz_china">杭州</string>
    <string name="city_ks_china">昆山</string>
    <string name="city_qd_china">青岛</string>
    <string name="city_sh_china">上海</string>
    <string name="city_sz_china">苏州</string>
    <string name="city_wx_china">无锡</string>
    <string name="city_nt_china">南通</string>
    <string name="city_wh_china">武汉</string>
    <string name="city_cz_eng">ChangZhou</string>
    <string name="city_hz_eng">HangZhou</string>
    <string name="city_ks_eng">KunShan</string>
    <string name="city_qd_eng">Qingdao</string>
    <string name="city_sh_eng">ShangHai</string>
    <string name="city_sz_eng">SuZhou</string>
    <string name="city_wx_eng">WuXi</string>
    <string name="city_nj_eng">NanJing</string>
    <string name="city_nt_eng">NanTong</string>
    <string name="city_wh_eng">WuHan</string>
    <string name="city_more">更多城市</string>
    <string name="city_more_expend">敬请期待&#8230;</string>
    <string name="hint_reg_note_left">温馨提示：您当前的区域为</string>
    <string name="hint_reg_note_right">公司，注册后将无法修改相关信息。</string>
    <string name="txt_login_activity_login">登录</string>
    <string name="txt_reg_activity_reg">注册</string>
    <string name="hint_reg_mobile">手机</string>
    <string name="hint_reg_verify">验证码</string>
    <string name="btn_reg_get_verify">获取验证码</string>
    <string name="btn_reg_get_verify_again">重新获取验证码</string>
    <string name="hint_reg_nickname">昵称</string>
    <string name="hint_reg_password">密码</string>
    <string name="hint_reg_repwd">再次输入密码</string>
    <string name="btn_reg_activity_reg">注册</string>
    <string name="hint_send_code_again">30秒后重新发送</string>
    <string name="hint_input_reg_city">请选择城市</string>
    <string name="hint_input_reg_build">请选择项目</string>
    <string name="hint_input_phone_number">请输入手机号</string>
    <string name="hint_fill_the_form">请完善表单</string>
    <string name="hint_input_authcode">请输入验证码</string>
    <string name="hint_input_usernick">请输入昵称</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_username">请输入姓名</string>
    <string name="hint_input_passwordagain">请再次输入密码</string>
    <string name="hint_password_different">两次输入的密码不一致</string>
    <string name="service_terms">我同意“服务条款”</string>
    <string name="bind_phone">绑定手机号码</string>
    <string name="btn_qq_activity_submit">提交</string>
    <string name="please_agreen_service">请勾选服务条款</string>
    <string name="txt_send_code_ing">正在发送</string>
    <string name="txt_send_code_error">发送失败</string>
    <string name="txt_activity_sun_mechanism">添加子机构</string>
    <string name="btn_mechanism_ok">确定</string>
    <string name="hint_edt_username">姓名</string>
    <string name="txt_tag_info">个人信息</string>
    <string name="txt_account_status">账号状态</string>
    <string name="txt_tb_on">已开启</string>
    <string name="txt_tb_off">已关闭</string>
    <string name="txt_mine_team_tag">我的团队</string>
    <string name="txt_mechanism_explain">说明：\n1.机构可以创建子机构，设置子机构的昵称、手机号码、姓名、密码。子机构可用手机号码、密码登录，并且重置密码。\n2.机构可以通过“我的团队”查看子机构列表。\n3.机构可以查看子机构的客户、佣金等详细信息。子机构只能查看自己的客户、佣金等详细信息。\n4.机构可以申请提取佣金，但子机构不能申请提取佣金</string>
    <string name="txt_houses_activity_main">楼盘</string>
    <string name="txt_info_activity_main">资讯</string>
    <string name="txt_recom_activity_main">推荐</string>
    <string name="txt_team_activity_main">团队</string>
    <string name="txt_mine_activity_main">我的</string>
    <string name="txt_search_hint">请输入楼盘名称</string>
    <string name="txt_earn_score">赚积分</string>
    <string name="txt_earn_score_detail">积分抵优惠</string>
    <string name="txt_earn_commission">赚佣金</string>
    <string name="txt_earn_commission_detail">佣金可提现</string>
    <string name="txt_recommend_houses">推荐楼盘</string>
    <string name="txt_recommend_houses_more">更多</string>
    <string name="txt_slide_hint">左右滑动，显示其他</string>
    <string name="txt_others_activities">热点活动</string>
    <string name="txt_others_activities_detail">快速精准推送</string>
    <string name="txt_others_tools">购房工具</string>
    <string name="txt_others_tools_detail">房贷购房政策</string>
    <string name="txt_location_unknown">未知</string>
    <string name="str_city_list_cannot_be_reached">未获取到城市列表</string>
    <string name="txt_newcity_activities">恒大动态</string>
    <string name="txt_houses_activities">楼盘活动</string>
    <string name="txt_my_messages">我的消息</string>
    <string name="txt_add_push">加推</string>
    <string name="str_i_need_recommend">我要推荐</string>
    <string name="str_i_need_appointment">我要预约</string>
    <string name="str_man_appointment">联系人</string>
    <string name="str_man_recommended">被推荐人</string>
    <string name="str_contact_way">联系方式</string>
    <string name="str_intent_city">意向城市</string>
    <string name="str_intent_houses">意向楼盘</string>
    <string name="str_remark">备 注</string>
    <string name="hint_man_recommended">姓名（必填）</string>
    <string name="hint_contact_way">联系方式（必填）</string>
    <string name="hint_remark">填写内容（选填）</string>
    <string name="btn_recommend_immediate">马上推荐</string>
    <string name="str_appointment_time">看房日期</string>
    <string name="hint_appointment_date">选择日期</string>
    <string name="hint_appointment_time">选择时间</string>
    <string name="btn_appointment_immediate">预约看房</string>
    <string name="hint_intent_city">选择</string>
    <string name="hint_intent_district">选择</string>
    <string name="txt_intent_city_unit">市</string>
    <string name="txt_intent_district_unit">区</string>
    <string name="hint_edt_intent_houses">请选择楼盘</string>
    <string name="str_recommended_success">推荐成功</string>
    <string name="str_appointment_success">预约成功</string>
    <string name="str_fill_the_form">请完善表单</string>
    <string name="txt_list_header_no_districts">不限</string>
    <string name="txt_no_matching_house">该地区没有楼盘</string>
    <string name="hint_input_name">请输入姓名</string>
    <string name="hint_input_contactway">请输入联系方式</string>
    <string name="hint_input_city">请选择城市</string>
    <string name="hint_input_house">请选择意向楼盘</string>
    <string name="hint_input_date">请选择日期</string>
    <string name="str_pass_client">您已认证成功，无需再次认证</string>
    <string name="txt_certification_status_certificated">已认证</string>
    <string name="txt_certification_status_certificating">正在认证</string>
    <string name="txt_certification_status_uncertificate">未认证</string>
    <string name="txt_hint_current_position">当前排名</string>
    <string name="txt_hint_commission_total">总佣金(元)：</string>
    <string name="txt_hint_wait_commission">待提佣</string>
    <string name="txt_hint_grant_commission">发放中</string>
    <string name="txt_hint_earned_commission">已提佣</string>
    <string name="txt_hint_my_client">我的客户:</string>
    <string name="txt_hint_count_recommend_confirmed">推荐确认</string>
    <string name="txt_hint_count_recommend_successed">推荐成功</string>
    <string name="txt_hint_count_visited_houses">已看房</string>
    <string name="txt_hint_count_sell_successed">销售成功</string>
    <string name="txt_hint_count_importent_client">重要客户</string>
    <string name="txt_hint_my_score">我的积分</string>
    <string name="txt_hint_integral">积分</string>
    <string name="txt_hint_my_attention">我的关注</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_reg">RegActivity</string>
    <string name="hint_can_not_load">无法获取</string>
    <string name="hint_approve_passed">已认证</string>
    <string name="hint_approve_waitfor">审核中</string>
    <string name="hint_approve_unpass">认证失败</string>
    <string name="hint_approve_null">未认证</string>
    <string name="txt_all_houses_list">所有楼盘列表</string>
    <string name="str_choose_location">选择位置</string>
    <string name="txt_sort_on_location">按区域</string>
    <string name="txt_sort_on_type">按类型</string>
    <string name="txt_sort_on_price">按价格</string>
    <string name="txt_houses_detail_activity">楼盘详情</string>
    <string name="txt_tag_houses_main_page">楼盘首页</string>
    <string name="txt_tag_houses_introduction">楼盘介绍</string>
    <string name="txt_tag_houses_map">地图</string>
    <string name="txt_tag_houses_traffic">交通配套</string>
    <string name="txt_tag_houses_type">户型赏析</string>
    <string name="txt_tag_houses_dynamic">楼盘动态</string>
    <string name="txt_tag_houses_tool">购房工具</string>
    <string name="txt_pic_houses_type">户型图</string>
    <string name="txt_pic_houses_effect">效果图</string>
    <string name="txt_pic_houses_traffic">交通图</string>
    <string name="txt_pic_houses_sight">实景图</string>
    <string name="txt_pic_houses_sample">样板间</string>
    <string name="btn_recommend_immediately">马上推荐</string>
    <string name="btn_appointment_immediately">马上预约</string>
    <string name="btn_house_appointment">预约看房</string>
    <string name="hint_average_price">均价：</string>
    <string name="hint_total_price">总价：</string>
    <string name="hint_money">￥</string>
    <string name="txt_house_loan">房贷计算器</string>
    <string name="txt_house_price">购房价格</string>
    <string name="txt_house_city">贷款城市</string>
    <string name="txt_first_opensell">首期开盘:</string>
    <string name="txt_build_speciality">楼盘特色:</string>
    <string name="txt_build_type">产品类型:</string>
    <string name="txt_project_speciality">项目特色</string>
    <string name="txt_realestate_category">物业类别</string>
    <string name="txt_realestate_cto">物业公司:</string>
    <string name="txt_delivery_date">交付日期:</string>
    <string name="txt_building_category">建筑类别</string>
    <string name="txt_build_floorarea">占地面积:</string>
    <string name="txt_build_equity">产 &#160;&#160;&#160;&#160;&#160;&#160;&#160;权:</string>
    <string name="txt_decoration_situation">装修状况:</string>
    <string name="txt_rate_container">容积率</string>
    <string name="txt_rate_green">绿&#160;&#160;化&#160;&#160;率:</string>
    <string name="str_time_to_over_tail">\n距优惠结束时间</string>
    <string name="str_time_recommended_tail">次\n成功推荐</string>
    <string name="str_people_appointed_tail">人\n已预约</string>
    <string name="tips_cannot_tail">无法启动手机中的拨号软件</string>
    <string name="txt_phone_str">案场热线：</string>
    <string name="txt_recommend_succeed">推荐成功</string>
    <string name="txt_appointment_succeed">已预约</string>
    <string name="txt_discount_time">优惠时间:</string>
    <string name="txt_tag_build_detail_hustyle">户型图详情</string>
    <string name="txt_discount_build">打折促销</string>
    <string name="txt_open_build">最新开盘</string>
    <string name="txt_activity_my_customer">我的客户</string>
    <string name="txt_tag_customer_important">重要客户</string>
    <string name="txt_tag_customer_sea_house">已看房</string>
    <string name="txt_tag_customer_sales">销售成功</string>
    <string name="txt_tag_customer_recommended_ok">推荐成功</string>
    <string name="txt_tag_customer_recommended_confirm">推荐确认</string>
    <string name="txt_customer_detail">客户详情</string>
    <string name="txt_activity_info_detail">详情</string>
    <string name="txt_activity_note">提示</string>
    <string name="txt_choose_city">请选择城市</string>
</resources>