<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_app"
    android:orientation="vertical" >
    <!-- 顶端导航 -->
    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_ll_top_fragment_houses"
        android:background="@color/main_app_bar" >
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/width_top_icon_houses_detail"
            android:layout_height="@dimen/height_top_icon_houses_detail"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_ten"
            android:background="@drawable/btn_back"
            android:contentDescription="@null"
            android:visibility="gone" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_choose_city"
            android:textColor="@android:color/white"
            android:textSize="@dimen/px40" />
    </RelativeLayout>
    <!-- first area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/dp_twelve"
        android:layout_marginRight="@dimen/dp_twelve"
        android:layout_marginTop="@dimen/dp_twelve"
        android:layout_weight="2"
        android:baselineAligned="false"
        android:orientation="horizontal" >
        <!-- 上海 -->
        <LinearLayout
            android:id="@+id/ll_city_shanghai"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/col_city_shanghai"
            android:gravity="center"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/iv_city_shanghai"
                android:layout_width="@dimen/dp_sixty"
                android:layout_height="@dimen/dp_sixty"
                android:background="@drawable/select_ico_sh"
                android:contentDescription="@null" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_five"
                android:text="@string/city_sh_china"
                android:textColor="@color/col_words_active_white"
                android:textSize="@dimen/px28" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_sh_eng"
                android:textColor="@color/col_words_active_white"
                android:textSize="@dimen/px22" />
        </LinearLayout>
        <!-- 常州 -->
        <LinearLayout
            android:id="@+id/ll_city_changzhou"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_five"
            android:layout_weight="1"
            android:background="@color/col_city_changzhou"
            android:gravity="center"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/iv_city_changzhou"
                android:layout_width="@dimen/dp_sixty"
                android:layout_height="@dimen/dp_sixty"
                android:background="@drawable/select_ico_cz"
                android:contentDescription="@null" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_five"
                android:textColor="@color/col_words_active_white"
                android:textSize="@dimen/px28" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_cz_eng"
                android:textColor="@color/col_words_active_white"
                android:textSize="@dimen/px22" />
        </LinearLayout>
        <!-- 南京 -->
        <LinearLayout
            android:id="@+id/ll_city_nanjing"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_five"
            android:layout_weight="1"
            android:background="@color/col_city_nanjing"
            android:gravity="center"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/iv_city_nanjing"
                android:layout_width="@dimen/dp_sixty"
                android:layout_height="@dimen/dp_sixty"
                android:background="@drawable/select_ico_nj"
                android:contentDescription="@null" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_five"
                android:text="@string/city_nj_china"
                android:textColor="@color/col_city_changzhou"
                android:textSize="@dimen/px28" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_nj_eng"
                android:textColor="@color/col_city_changzhou"
                android:textSize="@dimen/px22" />
        </LinearLayout>
    </LinearLayout>
    <!-- secend area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/dp_twelve"
        android:layout_marginRight="@dimen/dp_twelve"
        android:layout_marginTop="@dimen/dp_five"
        android:layout_weight="2"
        android:baselineAligned="false"
        android:orientation="horizontal" >
        <!-- 苏州 -->
        <LinearLayout
            android:id="@+id/ll_city_suzhou"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/col_city_suzhou"
            android:gravity="center"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/iv_city_suzhou"
                android:layout_width="@dimen/dp_sixty"
                android:layout_height="@dimen/dp_sixty"
                android:background="@drawable/select_ico_sz"
                android:contentDescription="@null" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_five"
                android:text="@string/city_sz_china"
                android:textColor="@color/col_city_changzhou"
                android:textSize="@dimen/px28" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_sz_eng"
                android:textColor="@color/col_city_changzhou"
                android:textSize="@dimen/px22" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_city_kunshan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_five"
            android:layout_weight="1"
            android:background="@color/col_city_kunshan"
            android:gravity="center"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/iv_city_kunshan"
                android:layout_width="@dimen/dp_sixty"
                android:layout_height="@dimen/dp_sixty"
                android:background="@drawable/select_ico_ks"
                android:contentDescription="@null" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_five"
                android:text="@string/city_ks_china"
                android:textColor="@color/col_words_active_white"
                android:textSize="@dimen/px28" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_ks_eng"
                android:textColor="@color/col_words_active_white"
                android:textSize="@dimen/px22" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_city_wuxi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_five"
            android:layout_weight="1"
            android:background="@color/col_city_wuxi"
            android:gravity="center"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/iv_city_wuxi"
                android:layout_width="@dimen/dp_sixty"
                android:layout_height="@dimen/dp_sixty"
                android:background="@drawable/select_ico_wx"
                android:contentDescription="@null" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_five"
                android:text="@string/city_wx_china"
                android:textColor="@color/col_words_active_white"
                android:textSize="@dimen/px28" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_wx_eng"
                android:textColor="@color/col_words_active_white"
                android:textSize="@dimen/px22" />
        </LinearLayout>
    </LinearLayout>
    <!-- third area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp_twelve"
        android:layout_marginLeft="@dimen/dp_twelve"
        android:layout_marginRight="@dimen/dp_twelve"
        android:layout_marginTop="@dimen/dp_five"
        android:layout_weight="2"
        android:baselineAligned="false"
        android:orientation="horizontal" >
        <!-- 杭州 -->
        <LinearLayout
            android:id="@+id/ll_city_hangzhou"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/col_city_hangzhou"
            android:gravity="center"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/iv_city_hangzhou"
                android:layout_width="@dimen/dp_sixty"
                android:layout_height="@dimen/dp_sixty"
                android:background="@drawable/select_ico_hz"
                android:contentDescription="@null" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_five"
                android:text="@string/city_hz_china"
                android:textColor="@color/col_words_active_white"
                android:textSize="@dimen/px28" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_hz_eng"
                android:textColor="@color/col_words_active_white"
                android:textSize="@dimen/px22" />
        </LinearLayout>
        <!-- 南通 -->
        <LinearLayout
            android:id="@+id/ll_city_nantong"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_five"
            android:layout_weight="1"
            android:background="@color/col_city_nantong"
            android:gravity="center"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/iv_city_nantong"
                android:layout_width="@dimen/dp_sixty"
                android:layout_height="@dimen/dp_sixty"
                android:background="@drawable/select_ico_nt"
                android:contentDescription="@null" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_five"
                android:text="@string/city_nt_china"
                android:textColor="@color/col_words_active_white"
                android:textSize="@dimen/px28" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_nt_eng"
                android:textColor="@color/col_words_active_white"
                android:textSize="@dimen/px22" />
        </LinearLayout>
        <!--
        <LinearLayout
            android:id="@+id/ll_city_more"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_five"
            android:layout_weight="1"
            android:background="@color/col_city_more"
            android:gravity="center_vertical"
            android:orientation="vertical" >
            <ImageView
                android:layout_width="@dimen/dp_sixty"
                android:layout_height="@dimen/dp_sixty"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_two"
                android:background="@drawable/select_ico_who"
                android:contentDescription="@null" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_eight" >
                <TextView
                    android:id="@+id/txt_city_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/city_more"
                    android:textColor="@color/col_city_more_txt"
                    android:textSize="@dimen/px22" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/txt_city_more"
                    android:layout_below="@id/txt_city_more"
                    android:text="@string/city_more_expend"
                    android:textColor="@color/col_city_more_txt"
                    android:textSize="@dimen/px22" />
            </RelativeLayout>
        </LinearLayout>
        -->
        <!-- 武汉 -->
        <LinearLayout
            android:id="@+id/ll_city_wuhan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_five"
            android:layout_weight="1"
            android:background="@color/col_city_wuhan"
            android:gravity="center"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/iv_city_wuhan"
                android:layout_width="@dimen/dp_sixty"
                android:layout_height="@dimen/dp_sixty"
                android:background="@drawable/select_ico_wh"
                android:contentDescription="@null" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_five"
                android:text="@string/city_wh_china"
                android:textColor="@color/col_city_changzhou"
                android:textSize="@dimen/px28" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_wh_eng"
                android:textColor="@color/col_city_changzhou"
                android:textSize="@dimen/px22" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>