<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_app" >
    <LinearLayout
        android:id="@+id/ll_indicate_words"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_ll_indicate_words_fragment_info"
        android:layout_below="@id/rl_top"
        android:baselineAligned="false"
        android:orientation="horizontal" >
        <RelativeLayout
            android:id="@+id/rl_pic_houses_type"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" >
            <TextView
                android:id="@+id/txt_pic_houses_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/txt_pic_houses_type"
                android:textColor="@color/col_words_active"
                android:textSize="@dimen/px32" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_pic_houses_effect"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" >
            <TextView
                android:id="@+id/txt_pic_houses_effect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/txt_pic_houses_effect"
                android:textColor="@color/col_words_inactive"
                android:textSize="@dimen/px32" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_pic_houses_traffic"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" >
            <TextView
                android:id="@+id/txt_pic_houses_traffic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/txt_pic_houses_traffic"
                android:textColor="@color/col_words_inactive"
                android:textSize="@dimen/px32" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_pic_houses_sight"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" >
            <TextView
                android:id="@+id/txt_pic_houses_sight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/txt_pic_houses_sight"
                android:textColor="@color/col_words_inactive"
                android:textSize="@dimen/px32" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_pic_houses_sample"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" >
            <TextView
                android:id="@+id/txt_pic_houses_sample"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/txt_pic_houses_sample"
                android:textColor="@color/col_words_inactive"
                android:textSize="@dimen/px32" />
        </RelativeLayout>
    </LinearLayout>
    <com.movitech.grande.views.UnderlinePageIndicator
        android:id="@+id/indicator_fragment_info"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/height_indicator_fragment_info"
        android:layout_below="@id/ll_indicate_words"
        android:background="@color/letter_grey_deep_15" />
    <com.movitech.grande.views.BaseViewPager
        android:id="@+id/vp_fragment_info"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/indicator_fragment_info" />
</RelativeLayout>